Remove dependence  to spy.jar,refactor transocoders.